--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,9 +16,119 @@ html, body {
   box-sizing: border-box;
 }
 
-.title {
-  font-family: $font-title;
+/* Headings */
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
 }
-.title-smooth {
-  font-family: $font-title-smooth;
+/* Font Size */
+h1 {
+  font-size: $heading-large;
+}
+h2 {
+  font-size: $heading-medium;
+}
+h3 {
+  font-size: $heading-small;
+}
+h4 {
+  font-size: calc($heading-small - .2rem);
+}
+h5 {
+  font-size: calc($heading-small - .4rem);
+}
+h6 {
+  font-size: calc($heading-small - .6rem);
+}
+/* Font Weight */
+h1, h2 {
+  font-weight: 900;
+}
+h3, h4, h5, h6 {
+  font-weight: 800;
+}
+/* Paragraphs */
+p {
+  margin: 0;
+  font-size: $paragraph;
+}
+/* Links */
+a {
+  color: hslac($primary, 1);
+  font-size: $paragraph;
+  text-decoration: none;
+}
+a:visited {
+  color: hslac($primary, .5);
+}
+/* Header */
+.header {
+  padding: 0;
+  width: 100%; height: 100vh;
+  position: relative;
+  animation: headerLoading 1s .5s cubic-bezier($transition-main, 1) forwards;
+  @include flex-center();
+
+  &-inner {
+    width: 100%; height: 100%;
+    position: relative;
+    overflow: hidden;
+    @include flex-center();
+
+    &-title {
+      width: 100%; height: 100%;
+      position: absolute;
+      z-index: 5;
+      @include flex-center();
+
+      &-inner {
+        padding: .22em 0;
+        position: relative;
+        color: hslac($white, 1);
+        font-family: $font-title-smooth;
+        font-style: italic;
+        text-align: center;
+        letter-spacing: .025em;
+        line-height: .8;
+        transform: scale(1.2, 1);
+        user-select: none;
+        overflow: hidden;
+        @include flex-center();
+      }
+      &-inner span {
+        top: 2em;
+        display: block;
+        position: relative;
+        transform: scale(.8, .8) rotate(17deg);
+      }
+      &-inner .ht-outlined {
+        color: transparent;
+        -webkit-text-stroke: 1px hslac($white, 1);
+      }
+    }
+    &-overlay {
+      width: 100%; height: 100%;
+      position: absolute;
+      background-color: hslac($black, 1);
+      z-index: 3;
+      animation: headerOverlayLoading 1s .5s cubic-bezier($transition-main, 1) forwards;
+    }
+    &-background {
+      min-width: 100%; min-height: 100%;
+      max-width: 110%;
+      position: absolute;
+      object-fit: cover;
+    }
+  }
+}
+@keyframes headerLoading {
+  0% { padding: 0; }
+  100% { padding: 2em;}
+}
+@keyframes headerTitle {
+  0% { top: 2em; transform: scale(.8, .8) rotate(17deg); }
+  100% { top: 0; transform: scale(1, 1) rotate(0); }
+}
+@keyframes headerOverlayLoading {
+  0% { background-color: hslac($black, 1); }
+  100% { background-color: hslac($black, .3);}
 }
