--- a/sass/main.scss
+++ b/sass/main.scss
@@ -60,9 +60,14 @@ a {
 a:visited {
   color: hslac($primary, .5);
 }
+/* Global */
+.view-width {
+  width: calc(100% - 6em);
+  max-width: 1420px;
+}
 /* Header */
 .header {
-  padding: 0;
+  margin: 0 0 5em 0; padding: 0;
   width: 100%; height: 100vh;
   position: relative;
   animation: headerLoading 1s .5s cubic-bezier($transition-main, 1) forwards;
@@ -72,6 +77,7 @@ a:visited {
     width: 100%; height: 100%;
     position: relative;
     overflow: hidden;
+    z-index: 3;
     @include flex-center();
 
     &-title {
@@ -109,7 +115,7 @@ a:visited {
       width: 100%; height: 100%;
       position: absolute;
       background-color: hslac($black, 1);
-      z-index: 3;
+      z-index: 4;
       animation: headerOverlayLoading 1s .5s cubic-bezier($transition-main, 1) forwards;
     }
     &-background {
@@ -119,7 +125,16 @@ a:visited {
       object-fit: cover;
     }
   }
+  &-background-blur {
+    width: 100vw; height: 100vh;
+    position: absolute;
+    transform: scale(.9, .9);
+    filter: blur(6rem);
+    opacity: .5;
+    z-index: 1;
+  }
 }
+/* Keyframes */
 @keyframes headerLoading {
   0% { padding: 0; }
   100% { padding: 2em;}
@@ -131,4 +146,74 @@ a:visited {
 @keyframes headerOverlayLoading {
   0% { background-color: hslac($black, 1); }
   100% { background-color: hslac($black, .3);}
+}
+/* Main */
+.main {
+  margin: 5em 0;
+  @include flex-col();
+}
+.article {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5em;
+
+  &-title {
+    font-size: $heading-medium;
+  }
+  .title {
+    font-size: $heading-medium;
+    &-main {
+      font-family: $font-title;
+    }
+    &-smooth {
+      font-family: $font-title-smooth;
+      font-style: italic;
+    }
+  }
+  &-quote {
+    margin: 3em 0 2em;
+    gap: 1em;
+    @include flex-col-left-ns();
+
+    &-statement {
+      font-size: calc($heading-small - .6rem);
+      font-family: $font-title-smooth;
+      font-style: italic;
+      font-weight: 600;
+    }
+    &-author {
+      font-size: calc($paragraph - .2rem);
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+  }
+  &-paragraph {
+    font-weight: 300;
+  }
+  &-content {
+    width: 100%;
+  }
+  &-media {
+    width: 100%;
+    &-container {
+      width: 100%;
+      position: relative;
+      @include flex-center();
+
+      &-image {
+        width: 100%;
+        position: relative;
+        z-index: 2;
+      }
+      &-image-blur {
+        top: .4em;
+        width: 100%;
+        position: absolute;
+        transform: scale(.94, .94);
+        filter: blur(4rem);
+        opacity: .5;
+        z-index: 1;
+      }
+    }
+  }
 }
