--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,7 +67,7 @@ a:visited {
 }
 /* Header */
 .header {
-  margin: 0 0 5em 0; padding: 0;
+  margin: 0 0 10em 0; padding: 0;
   width: 100%; height: 100vh;
   position: relative;
   animation: headerLoading 1s .5s cubic-bezier($transition-main, 1) forwards;
@@ -149,7 +149,6 @@ a:visited {
 }
 /* Main */
 .main {
-  margin: 5em 0;
   @include flex-col();
 }
 .article {
@@ -214,6 +213,23 @@ a:visited {
         opacity: .5;
         z-index: 1;
       }
+    }
+  }
+}
+.article-videoline {
+  margin: 10em 0;
+  width: 100%;
+  &-inner {
+    width: 100%; height: 35vw;
+    position: relative;
+    overflow: hidden;
+    @include flex-center();
+
+    &-media {
+      min-width: 100%; min-height: 100%;
+      max-width: 110%;
+      position: absolute;
+      object-fit: cover;
     }
   }
 }
