--- a/sass/main.scss
+++ b/sass/main.scss
@@ -78,6 +78,8 @@ a:visited {
   &-inner {
     padding: 0 1em;
     height: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr;
     &-logo {
       height: 100%;
       @include flex-left();
@@ -88,6 +90,54 @@ a:visited {
           height: 3em;
           path {
             fill: hslac($white, 1);
+          }
+        }
+      }
+    }
+    &-items {
+      height: 100%;
+      @include flex-right();
+
+      &-list {
+        height: 100%;
+        margin: 0; padding: 0;
+        list-style-type: none;
+        @include flex-center();
+
+        &-item {
+          position: relative;
+          @include flex-center();
+
+          &-link {
+            padding: 1em 1.4em;
+            height: 100%;
+            color: hslac($white, 1);
+            background-color: hslac($black, .3);
+            backdrop-filter: blur(1rem);
+            border-radius: 5rem;
+            border: none;
+            font-family: $font-main;
+            font-size: $paragraph;
+            @include flex-center();
+
+            &::placeholder {
+              color: hslac($white, 1);
+            }
+          }
+          &-search {
+            right: .8em;
+            width: 3em; height: 3em;
+            position: absolute;
+            background-color: hslac($black, 0);
+            border-radius: 5rem;
+            @include flex-center();
+
+            svg {
+              width: 1.5em;
+              #search-ico {
+                stroke: hslac($white, 1);
+              }
+            }
           }
         }
       }
