--- a/sass/main.scss
+++ b/sass/main.scss
@@ -357,6 +357,108 @@ a:visited {
   0% { background-color: hslac($black, 1); }
   100% { background-color: hslac($black, .6); }
 }
+/* Other Article List */
+.other-article {
+  margin: 10em 0; padding: 2em;
+  position: relative;
+  gap: 2em;
+  @include flex-col-left-ns();
+
+  &-title {
+    top: .3em; left: 50%;
+    position: absolute;
+    color: transparent;
+    font-size: $heading-large;
+    font-family: $font-title-smooth;
+    font-style: italic;
+    font-weight: 900;
+    -webkit-text-stroke: 1px hslac($black, 1);
+    transform: translateX(-50%);
+  }
+  &-list {
+    padding: 5em 0 0 0;
+    width: 100%; max-width: 75%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: flex-start;
+    gap: 2em;
+    &-item {
+      margin: 0; padding: 0;
+      width: 100%; height: 25em;
+      position: relative;
+      @include flex-center();
+
+      &-inner {
+        width: 100%; height: 100%;
+        position: relative;
+        overflow: hidden;
+        z-index: 3;
+        @include flex-center();
+
+        &-title {
+          width: 100%; height: 100%;
+          position: absolute;
+          z-index: 5;
+          @include flex-center();
+
+          &-inner {
+            padding: .22em 0;
+            position: relative;
+            color: hslac($white, 1);
+            font-family: $font-title-smooth;
+            font-size: $heading-small;
+            font-weight: 900;
+            font-style: italic;
+            text-align: center;
+            letter-spacing: .025em;
+            line-height: .8;
+            text-decoration: none;
+            transform: scale(1.2, 1);
+            user-select: none;
+            overflow: hidden;
+            @include flex-center();
+
+            &:visited {
+              color: hslac($white, 1);
+            }
+          }
+          &-inner span {
+            top: 0;
+            display: block;
+            position: relative;
+            transform: scale(1, 1) rotate(0);
+          }
+          &-inner .ht-outlined {
+            color: transparent;
+            -webkit-text-stroke: 1px hslac($white, 1);
+          }
+        }
+        &-overlay {
+          width: 100%; height: 100%;
+          position: absolute;
+          background-color: hslac($black, .6);
+          z-index: 4;
+        }
+      }
+      &-background {
+        min-width: 110%; min-height: 110%;
+        max-width: 125%;
+        position: absolute;
+        object-fit: cover;
+        transform: scale(1, 1);
+        transition: all .35s cubic-bezier($transition-main, 1);
+      }
+      &-background-blur {
+        width: 100%; height: 100%;
+        position: absolute;
+        transform: scale(.9, .9);
+        filter: blur(6rem);
+        opacity: .5;
+        z-index: 1;
+      }
+    }
+  }
+}
 /* Articles */
 .article {
   display: grid;
