--- a/sass/main.scss
+++ b/sass/main.scss
@@ -388,6 +388,11 @@ a:visited {
       position: relative;
       @include flex-center();
 
+      &-link {
+        width: 100%; height: 100%;
+        position: absolute;
+        z-index: 10;
+      }
       &-inner {
         width: 100%; height: 100%;
         position: relative;
